--- a/package.json
+++ b/package.json
@@ -17,23 +17,23 @@
     "@fortawesome/free-brands-svg-icons": "^7.0.0",
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/react-fontawesome": "^3.0.2",
-    "@mantine/core": "8.3.8",
-    "@mantine/dates": "8.3.8",
-    "@mantine/form": "8.3.8",
-    "@mantine/hooks": "8.3.8",
-    "@mantine/modals": "8.3.8",
-    "@mantine/notifications": "8.3.8",
-    "@mantine/tiptap": "8.3.8",
+    "@mantine/core": "8.3.13",
+    "@mantine/dates": "8.3.13",
+    "@mantine/form": "8.3.13",
+    "@mantine/hooks": "8.3.13",
+    "@mantine/modals": "8.3.13",
+    "@mantine/notifications": "8.3.13",
+    "@mantine/tiptap": "8.3.13",
     "@tanstack/react-query": "^5.64.1",
     "@tauri-apps/api": "2.9.1",
     "@tauri-apps/plugin-clipboard-manager": "^2.3.0",
-    "@tauri-apps/plugin-dialog": "~2",
-    "@tauri-apps/plugin-fs": "2.3.0",
-    "@tauri-apps/plugin-http": "2.4.4",
-    "@tauri-apps/plugin-notification": "~2",
-    "@tauri-apps/plugin-os": "~2",
-    "@tauri-apps/plugin-process": "~2",
-    "@tauri-apps/plugin-shell": "~2",
+    "@tauri-apps/plugin-dialog": "2.6.0",
+    "@tauri-apps/plugin-fs": "2.4.5",
+    "@tauri-apps/plugin-http": "2.5.6",
+    "@tauri-apps/plugin-notification": "2.3.3",
+    "@tauri-apps/plugin-os": "2.3.2",
+    "@tauri-apps/plugin-process": "2.3.1",
+    "@tauri-apps/plugin-shell": "2.3.4",
     "@tauri-apps/plugin-updater": "~2.9.0",
     "@tiptap/pm": "^3.6.2",
     "@tiptap/react": "^3.6.2",
@@ -53,8 +53,8 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2.9.6",
-    "@types/node": "^20.19.0",
-    "@types/react": "^18.3.26",
+    "@types/node": "^20.19.30",
+    "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
@@ -63,7 +63,7 @@
     "postcss-preset-mantine": "^1.14.4",
     "postcss-simple-vars": "^7.0.1",
     "typescript": "^5.4.5",
-    "vite": "^4.5.0",
+    "vite": "^4.5.14",
     "vite-plugin-svgr": "^2.4.0"
   }
 }
